Bug 1159685 - Fix BluetoothSspVariant argument passing for SspRequestNotification. r=shuang